name:                pure-proxy
version:             0.7.0.0
synopsis: 
homepage:            github.com/grumply/pure-proxy
license:             BSD3
license-file:        LICENSE
author:              Sean Mackenzie
maintainer:          sean@grump.ly
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Pure.Proxy

  build-depends:
      base >=4.8
    , pure >= 0.7 && < 1
    , pure-prop >= 0.7 && < 1

  hs-source-dirs:      src
  default-language:    Haskell2010

