name:                pure-proxy
version:             0.7.0.0
homepage:            purehs.org/doc/pure-proxy
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-proxy.git

library
  exposed-modules:
      Pure.Proxy

  build-depends:
      base
    , pure
    , pure-prop

  hs-source-dirs:      src
  default-language:    Haskell2010

